added projects page
separated all css files, added projects page and did some improvements

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@ Start Date: 23rd July 2024
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Samarth Sonawane</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="footer.css">
+
     <script src="script.js"></script>
 
     <!-- fonts -->
@@ -41,11 +48,11 @@ Start Date: 23rd July 2024
                 <span></span>
             </div>
             <div class="menu">
-                <span>Home</span>
-                <span>About</span>
-                <span>Projects</span>
-                <span>Blogs</span>
-                <span>Contact</span>
+                <span><a href="/index.html">Home</a></span>
+                <span><a href="/index.html#about">About</a></span>
+                <span><a href="/projects.html">Projects</a></span>
+                <span><a href="/blogs.html">Blog</a></span>
+                <span><a href="/index.html#contact">Contact</a></span>
             </div>
         </nav>
         <section class="home">
@@ -122,7 +129,7 @@ Start Date: 23rd July 2024
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <div class="left-heading" , id="left-heading">
                 <span>
                     About Me
@@ -232,7 +239,7 @@ Start Date: 23rd July 2024
                 </div>
             </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="contact-header">
                 <span>
                     Contact
@@ -240,7 +247,7 @@ Start Date: 23rd July 2024
             </div>
             <div class="contact-box">
                 <div class="contact-info">
-                    You can drop an email or contact me on my phone number
+                    Feel free to reach out by email or dial my digits &hyphen; I&apos;d love to connect!
                 </div>
                 <div class="contact-links">
                     <a href="tel:+918459367706">
